# DuRiWorkspace

./: --json-summary --quiet.err.txt  .cursorrules  .dockerignore  .duriintegrityignore  .env  .env.backup  .env.example  .env.grafana.example  .flake8  .gitattributes  .gitignore  .gitmodules  .ops.env  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .wf_smoke  .yamllint  .yamllint.yaml  01_unwrap_large.sh  90DAY_PLAN_NEXT_STEPS.md  90DAY_PROJECT_MANAGEMENT_AXIS.md  APPLY_OPS_LOCK.md  AUTOMATION_PIPELINE_COMPLETION.md  BACKUP_AUTOMATION_PIPELINE_COMPLETE_20250803.md  BACKUP_INFO.md  BACKUP_ROLLBACK_GUIDE.md  BACKUP_SYSTEM_GUIDE.md  CHANGELOG.md  CLEANUP_PLAN.md  CODEMAP.md  CODEOWNERS  COMPLETE_25_PHASE_ROADMAP_20250731.md  COMPLETE_DIFF_PATCH.md  COMPLETE_PHASE25_ROADMAP.md  CONVERSATION_PRECISION_LEARNING.md  CORE_IDENTITY.md  CURRENT_CONTEXT_SUMMARY.md  CURRENT_STATUS.md  CURRENT_WORK_STATUS_20250817.md  (+406 more)
.bundle_tmp/: family.yml.json  manifest.yml.json  ops.yml.json  schema__family.schema.json.json
.duri_sleep_schedule/: awake_before_sleep_2025-10-02_1835.txt  hibernation_completed.txt  wake_up_2025-10-03_0833.txt
.githooks/: pre-commit  pre-commit-systemd-verify  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  freeze-allow.txt  pull_request_template.md
.obs/: promotion.yml
.reports/: check-prom-output.txt  day_status_1_30.tsv  day_status_1_30_status.tsv  day_status_40_60.tsv  day_status_40_60_status.tsv  junit.xml  last_errors_optimized.tsv
.slo/: auto_relax.yml
.test-artifacts/: crash.err.txt  ro_hdd.err.txt  ro_hdd.json
DuRiCore/: .gitignore  30_day_evolution_plan.md  3단계_통합_학습_시스템_완성_보고서.md  AUGUST_6_7_WORK_SUMMARY.md  BACKUP_PHASE2_2_COMPLETION.md  BENCHMARK_ANALYSIS_PHASE6.md  CHATGPT_FEEDBACK_IMPLEMENTATION_SUMMARY.md  CONTEXT_SUMMARY_PHASE8_COMPLETE.md  CURRENT_ANALYSIS_SUMMARY.md  CURRENT_STATUS_MEMO.md  CURRENT_STATUS_SUMMARY.md  CURSOR_CONTEXT_SUMMARY_PHASE5_5_3.md  CURSOR_RESTART_GUIDE_PHASE5_5_2.md  CURSOR_RESTART_GUIDE_PHASE5_5_3.md  DAY10_BACKUP_SUMMARY.md  DAY10_COMPLETION_REPORT.md  DAY10_FINAL_COMPLETION_REPORT.md  DAY10_FINAL_INTEGRATION_PLAN.md  DAY10_FINAL_SUMMARY.md  DAY10_PLAN.md  DAY11_PLAN.md  DAY12_COMPLETION_REPORT.md  DAY12_CONTEXT_SUMMARY.md  DAY13_COMPLETION_REPORT.md  DAY14_IMPLEMENTATION_PLAN.md  DAY3_COMPLETION_REPORT.md  DAY4_COMPLETION_REPORT.md  DAY8_COMPLETION_REPORT.md  DAY8_PLAN.md  DAY9_COMPLETION_REPORT.md  DAY9_PLAN.md  DURI_COMPLETE_SUMMARY.md  DURI_DAILY_PLAN.md  DURI_DEVELOPMENT_BARRIERS_ANALYSIS.md  DURI_EVOLUTION_PLAN.md  DURI_HUMAN_AI_EVOLUTION_ANALYSIS.md  EVOLUTION_COMPLETION_REPORT.md  (+342 more)
alerting/: ai_rules.yml  (+1 more)
(+39305 files in other folders)
