[project]
name = "duri-finale"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["duri_finale*"]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = """
(
  ^duri_snapshots/
| ^restored_day8_10/
| ^unified_conversations/
| ^logs/
| ^DuRiCore_backup_.*
| ^backup.*
| ^duri_archive/
)
"""

[tool.isort]
profile = "black"
line_length = 88
py_version = 311
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
known_first_party = ["duri_core", "duri_brain", "duri_modules", "DuRiCore"]
known_third_party = ["pytest", "psutil"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
src_paths = ["duri_core", "duri_brain", "duri_modules", "DuRiCore", "."]
skip_glob = [
  "duri_snapshots/**",
  "restored_day8_10/**",
  "unified_conversations/**",
  "logs/**",
  "DuRiCore_backup_*/**",
  "backup*/**",
  "duri_archive/**",
]
